# LOG6302

./: README.md
Quiz1/: quiz1_Troclet_Philippe.aux  quiz1_Troclet_Philippe.tex
Quiz1/Images/: AST.xml
TP1/: CMakeLists.txt
TP1/src/: .Visitor.cpp.swp  .Visitor.h.swp  ABSASTVisitor.cpp  ABSASTVisitor.h  ABSNode.cpp  ABSNode.h  ABSUMLRelation.cpp  ABSUMLRelation.h  ASTTree.cpp  ASTTree.h  AssignNode.cpp  AssignNode.h  AttributeNode.cpp  AttributeNode.h  BackwardSlicer.cpp  BackwardSlicer.h  BlockNode.cpp  BlockNode.h  BreakNode.cpp  BreakNode.h  CDGraphBuilder.cpp  CDGraphBuilder.h  CFG.cpp  CFG.h  CFGAssignNode.cpp  CFGAssignNode.h  CFGBlockNode.cpp  CFGBlockNode.h  CFGBreakNode.cpp  CFGBreakNode.h  CFGCondNode.cpp  CFGCondNode.h  CFGLoopNode.cpp  CFGLoopNode.h  CFGMethodNode.cpp  CFGMethodNode.h  CFGNode.cpp  CFGNode.h  CFGReturnNode.cpp  CFGReturnNode.h  (+84 more)
TP1/src/MyTree/: ABSNode.cpp  ASTTree.h  ClassNode.h  CondNode.cpp  CondNode.h  FileNode.cpp  JumpNode.h  ProgramNode.cpp  VarNode.h
TP1/tests/: .LOG6302_TP1_method_arg.cpp.swp  .wordCount.cpp.swp  LOG6302_TP1_While_cfg.cpp  LOG6302_TP1_composition.cpp  LOG6302_TP1_deux_for.cpp  LOG6302_TP1_deux_methodes.cpp  LOG6302_TP1_example.cpp  LOG6302_TP1_exp.cpp  LOG6302_TP1_for_imbr.cpp  LOG6302_TP1_fullif.cpp  LOG6302_TP1_heritage.cpp  LOG6302_TP1_include.cpp  LOG6302_TP1_iostream.cpp  LOG6302_TP1_method_arg.cpp  LOG6302_TP1_methode_imbr.cpp  LOG6302_TP1_methode_mm_nom.cpp  LOG6302_TP1_namespace.cpp  LOG6302_TP1_switch.cpp  UnaryBase.cpp  UnaryClass.cpp  compile_commands.json  gmon.out  unaryOp.cpp  wordCount.cpp
TP1/tests/DecAnticipeeWithAtt/: CMakeCache.txt  CMakeLists.txt  Makefile  anticipeeWithAtt  cmake_install.cmake  compile_commands.json  dummy_Class.h  gmon.out  main.cpp  test.h
TP1/tests/DeclarationAnticipee/: .misc.h.swp  CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  compile_commands.json  gmon.out  main.cpp  misc.h
TP1/tests/DeuxClassesTest/: CMakeCache.txt  CMakeLists.txt  Main.cpp  Makefile  Specialite.cpp  Specialite.h  cmake_install.cmake  compile_commands.json  gmon.out
TP1/tests/Dot/: testCharFirst.dot  testChevrons.dot  testEtCom.dot  testEtoile.dot  testNoLabel.dot  testNormalIterator.dot  testProgressif.dot  testProgressifMoitiee.dot  testSimple.dot  testSimple2.dot  testSimple3.dot  testSimple4.dot  testUnderscore.dot  testdeuxpoints.dot
TP1/tests/Exemples TP4-20170319/: main.cpp  main.cpp.dot  main.cpp.rd.dot  while-if-break.c  while-if-break.c.dom.dot  while-if-break.c.dot  while-if-break.c.pdom.dot  while-if-return.c  while-if-return.c.dom.dot  while-if-return.c.dot  while-if-return.c.pdom.dot
TP1/tests/Exemples TP5-20170328/: program_slicing_1.c  program_slicing_1.c.cd.dot  program_slicing_1.c.dd.dot  program_slicing_1.c.dom.dot  program_slicing_1.c.dot  program_slicing_1.c.pdom.dot  program_slicing_1.c.rd.dot  program_slicing_1.c.slice_c.txt
TP1/tests/MicroTest/: .Infirmier.h.swp  CMakeCache.txt  CMakeLists.txt  Infirmier.cpp  Infirmier.h  Main.cpp  Makefile  cmake_install.cmake  compile_commands.json  gmon.out  microTest
TP1/tests/MicroUML/: CMakeCache.txt  CMakeLists.txt  Etudiant.cpp  Etudiant.h  Homme.cpp  Homme.h  Makefile  Prof.cpp  Prof.h  Universite.h  cmake_install.cmake  compile_commands.json  gmon.out  main.cpp  universite
TP1/tests/SimplestTest/: CMakeCache.txt  CMakeLists.txt  Infirmier.cpp  Infirmier.h  Main.cpp  Makefile  cmake_install.cmake  compile_commands.json  gmon.out  simplestTest
TP1/tests/TestComplet/: .Main.cpp.swp  CMakeCache.txt  CMakeLists.txt  Const.h  Infirmier.cpp  Infirmier.h  Main.cpp  Makefile  Medecin.cpp  Medecin.h  Personnel.cpp  Personnel.h  Specialite.cpp  Specialite.h  cmake_install.cmake  compile_commands.json  gmon.out  inf1010
TP1/tests/TestHeritage/: CMakeCache.txt  CMakeLists.txt  Echiquier.cpp  Echiquier.h  Main.cpp  Makefile  Piece.cpp  Piece.h  Pion.cpp  Pion.h  Roi.cpp  Roi.h  Tour.cpp  Tour.h  cmake_install.cmake  compile_commands.json  gmon.out  testHeritageTableau
